# micro_timestamp

./: Cargo.toml  Dockerfile  Readme.md
configuration/: base.yaml
src/: configurations.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs
src/routes/: convert_date.rs  default_date.rs  health_check.rs  mod.rs
tests/: default_date.rs  domain.rs  health_check.rs  spawn.rs
