[package]
name = "micro_timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.134"
chrono = "0.4.19"
claim = "0.5.0"