[package]
name = "micro_timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.134"
chrono = "0.4.19"
claim = "0.5.0"
#tracing = { version = "0.1", features = ["log"] }
#tracing-actix-web = "=0.5.0-beta.9"
#tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
#tracing-bunyan-formatter = "0.3"
#tracing-log = "0.1"